sassi-macros/tests/lihaaf/compile_fail/cacheable_generic_struct.stderr
error: Cacheable: generic structs are not supported in v0.1; use a concrete wrapper type
 --> $DIR/cacheable_generic_struct.rs:7:21
  |
7 | struct GenericEntity<T> {
  |                     ^

error: aborting due to 1 previous error
